onclick for circle/cross enabled

--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ td {
     /* Kein Innenabstand für die Zellen */
 }
 
+td:hover{
+    background-color: rgba(255, 255, 255, 0.2);
+    cursor: pointer;
+}
+
 td,
 th {
     border: 0;
