--- a/style.css
+++ b/style.css
@@ -65,3 +65,16 @@ td:hover {
     /* Hintergrundfarbe bei Hover */
 }
 
+.winning-line {
+    position: absolute;
+    height: 5px;
+    background-color: #00ff00; /* Farbe der gewinnenden Linie */
+    transform-origin: 0 50%;
+  }
+
+  .draw-line {
+    position: absolute;
+    height: 5px;
+    background-color: #ff0000; /* Farbe der Unentschieden-Linie */
+    transform: rotate(45deg);
+  }
