--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ h1{
     display: flex;
     align-items: center;
     margin-top: 256px;
+    position: relative;
 }
 
 table {
@@ -64,17 +65,3 @@ td:hover {
     background-color: #777;
     /* Hintergrundfarbe bei Hover */
 }
-
-.winning-line {
-    position: absolute;
-    height: 5px;
-    background-color: #00ff00; /* Farbe der gewinnenden Linie */
-    transform-origin: 0 50%;
-  }
-
-  .draw-line {
-    position: absolute;
-    height: 5px;
-    background-color: #ff0000; /* Farbe der Unentschieden-Linie */
-    transform: rotate(45deg);
-  }
