--- a/style.css
+++ b/style.css
@@ -65,3 +65,30 @@ td:hover {
     background-color: #777;
     /* Hintergrundfarbe bei Hover */
 }
+
+
+.center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.mt-32 {
+    margin-top: 32px;
+}
+
+button {
+    display: block;
+    padding: 10px 20px;
+    border-radius: 5px;
+    border: 2px solid #fff;
+    color: #fff;
+    background-color: #00B0EF;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #96cadd;
+}
